src/objects/Invoice_Component_Movement__c.object
<CustomObject>
    <fields>
        <fullName>Component_Movement_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component Movement Table</label>
        <referenceTo>Component_Movement_Table__c</referenceTo>
        <relationshipLabel>Invoice Component Movement</relationshipLabel>
        <relationshipName>Invoice_Component_Movement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Invoice_No__c</fullName>
        <label>Full Invoice No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoive_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoive Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Invoice Component Movement</label>
    <nameField>
        <label>Invoice Component Movement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Component Movement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>